Remover UseBiasedLocking
OpenJDK 64-Bit Server VM warning: Option UseBiasedLocking was deprecated in
version 15.0 and will likely be removed in a future release.